--- a/index.html
+++ b/index.html
@@ -14,15 +14,18 @@
 </head>
 
 <body>
-    <div class="body d-flex justify-content-around bg-white">
-        <div>
-            <img src="/Volumes/MARSHY/Rolling Code/Marmoleria Mina/Fotos/logo 500px.jpg" alt="">
-        </div>
-    </div>
-    <nav class="navbar body d-flex justify-content-around p-3 row">
-        <nav class="navbar navbar-expand-lg navbar-light d-flex-content-center">
-            <a class="navbar-brand" href="#">Marmoleria Mina</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+    <div class="container">
+        <header>
+
+            <div class="body d-flex justify-content-around bg-white">
+                <div>
+                    <img src="Fotos/logo 500px.jpg" alt="">
+                </div>
+            </div>
+            
+            <nav class="naranja navbar body d-flex justify-content-around p-3 row navbar-expand-lg d-flex-content-center">
+                <a class="navbar-brand" href="#">Marmoleria Mina</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -93,12 +96,13 @@
             integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
             crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-            crossorigin="anonymous"></script>
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-            crossorigin="anonymous"></script>
-
-</body>
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
+        
+    </div>
+    </body>
 
 </html>
