--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- estilo personalizado -->
-    <link rel="stylesheet" href="/Users/bitsy/Desktop/Proyectos/Marmoleria-Mina-2/Css/custommina.css">
+    <link rel="stylesheet" href="css/custommina.css">
     <!-- Estilo bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -23,7 +23,7 @@
                 </div>
             </div>
             
-            <nav class="naranja navbar body d-flex justify-content-around p-3 row navbar-expand-lg d-flex-content-center">
+            <nav class="navbar navbar-expand-lg navbar-light ">
                 <a class="navbar-brand" href="#">Marmoleria Mina</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
